Add translations for Elevate/Elements themes

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -2424,4 +2424,286 @@
 
     <string name="touch_again_to_exit">Please touch again to exit</string>
 
+    <!-- render theme legend: category "areas" -->
+    <string name="rtl_category_areas">Areas</string>
+
+    <string name="rtl_fell_meadow">fell / meadow</string>
+    <string name="rtl_heath">heath</string>
+    <string name="rtl_marsh">marsh</string>
+    <string name="rtl_rock">rock</string>
+    <string name="rtl_scree">scree</string>
+    <string name="rtl_scrub">scrub</string>
+    <string name="rtl_wood_mixed">wood (mixed)</string>
+    <string name="rtl_wood_coniferous">wood (coniferous)</string>
+    <string name="rtl_wood_deciduous">wood (deciduous)</string>
+    <string name="rtl_glacier">glacier</string>
+    <string name="rtl_grass">grass</string>
+    <string name="rtl_farmland">farmland</string>
+    <string name="rtl_orchard">orchard</string>
+    <string name="rtl_vineyard">vineyard</string>
+    <string name="rtl_water">water</string>
+    <string name="rtl_water_intermittent">water (intermittent)</string>
+    <string name="rtl_military">military</string>
+    <string name="rtl_nature_reserve">nature reserve</string>
+    <string name="rtl_nature_reserve_strict">nature reserve (strict)</string>
+    <string name="rtl_cliff">cliff</string>
+    <string name="rtl_ridge">ridge</string>
+    <string name="rtl_dyke">dyke</string>
+    <string name="rtl_embankment">embankment</string>
+    <string name="rtl_spring">spring</string>
+    <string name="rtl_powerline">powerline</string>
+
+    <!-- render theme legend: category "Roads & Paths" -->
+    <string name="rtl_category_roads_paths">Roads &amp; Paths</string>
+
+    <string name="rtl_paved_path">paved path</string>
+    <string name="rtl_paved_path_gravel">paved path (gravel)</string>
+    <string name="rtl_unpaved_path">unpaved path</string>
+    <string name="rtl_unpaved_path_partly_grown">unpaved path (partly grown)</string>
+    <string name="rtl_unpaved_path_grown">unpaved path (grown)</string>
+    <string name="rtl_surface_unknown">surface unknown</string>
+    <string name="rtl_unpaved_footpath">unpaved footpath</string>
+    <string name="rtl_paved_footpath">paved footpath</string>
+    <string name="rtl_bridleway">bridleway</string>
+    <string name="rtl_access_destination">access (destination)</string>
+    <string name="rtl_access_private">access (private)</string>
+    <string name="rtl_access_no">access (no)</string>
+    <string name="rtl_cycleway">cycleway</string>
+    <string name="rtl_cycleway_steep">cycleway (steep)</string>
+    <string name="rtl_cycleway_paved">cycleway (paved)</string>
+    <string name="rtl_paved_smooth">paved (smooth)</string>
+    <string name="rtl_paved_rough">paved (rough)</string>
+    <string name="rtl_surface_compacted">surface compacted</string>
+    <string name="rtl_surface_gravel">surface gravel</string>
+    <string name="rtl_surface_raw">surface raw</string>
+
+    <!-- render theme legend: category "Walking, Cycling, Climbing -->
+    <string name="rtl_category_walking_cycling_climbing">Walking, Cycling, Climbing</string>
+
+    <string name="rtl_hiking_T1">hiking T1</string>
+    <string name="rtl_hiking_T2">hiking T2</string>
+    <string name="rtl_hiking_T3">hiking T3</string>
+    <string name="rtl_hiking_T4">hiking T4</string>
+    <string name="rtl_hiking_T5">hiking T5</string>
+    <string name="rtl_hiking_T6">hiking T6</string>
+    <string name="rtl_mtb_S0">MTB S0</string>
+    <string name="rtl_mtb_S1">MTB S1</string>
+    <string name="rtl_mtb_S2">MTB S2</string>
+    <string name="rtl_mtb_S3">MTB S3</string>
+    <string name="rtl_mtb_S4">MTB S4</string>
+    <string name="rtl_mtb_S56">MTB S5/6</string>
+    <string name="rtl_uphill15">uphill -15%</string>
+    <string name="rtl_uphill20">uphill -20%</string>
+    <string name="rtl_uphill25">uphill -25%</string>
+    <string name="rtl_uphill30">uphill -30%</string>
+    <string name="rtl_uphill40">uphill -40%</string>
+    <string name="rtl_uphill_too_steep">uphill too steep</string>
+    <string name="rtl_security_rope">security: rope</string>
+    <string name="rtl_security_rungs">security: rungs</string>
+    <string name="rtl_security_ladder">security: ladder</string>
+
+    <!-- render theme legend: category "POI / Symbols" -->
+    <string name="rtl_category_poi_symbols">POI / Symbols</string>
+
+    <string name="rtl_bench">bench</string>
+    <string name="rtl_cairn">cairn</string>
+    <string name="rtl_drinking_water">drinking water</string>
+    <string name="rtl_guidepost">guidepost</string>
+    <string name="rtl_info_board">info board</string>
+    <string name="rtl_info_office">info office</string>
+    <string name="rtl_info_terminal">info terminal</string>
+    <string name="rtl_peak">peak</string>
+    <string name="rtl_peak_cross">peak cross</string>
+    <string name="rtl_picnic_site">picnic site</string>
+    <string name="rtl_playground">playground</string>
+    <string name="rtl_playground_private">private playground</string>
+    <string name="rtl_recycling">recycling</string>
+    <string name="rtl_shelter">shelter</string>
+    <string name="rtl_shelter_picnic">picnic shelter</string>
+    <string name="rtl_shelter_rock">rock shelter</string>
+    <string name="rtl_telephone">telephone</string>
+    <string name="rtl_toilets">toilets</string>
+    <string name="rtl_volcano">volcano</string>
+
+    <string name="rtl_adit_disused">disused adit</string>>
+    <string name="rtl_archaeological">archaeological</string>
+    <string name="rtl_artwork">artwork</string>
+    <string name="rtl_attraction">attraction</string>
+    <string name="rtl_boundary_stone">boundary (stone)</string>
+    <string name="rtl_bunker_disused">bunker (disused)</string>
+    <string name="rtl_castle">castle</string>
+    <string name="rtl_cinema">cinema</string>
+    <string name="rtl_cross">cross</string>
+    <string name="rtl_fountain">fountain</string>
+    <string name="rtl_library">library</string>
+    <string name="rtl_memorial">memorial</string>
+    <string name="rtl_memorial_plaque">memorial plaque</string>
+    <string name="rtl_memorial_statue">memorial statue</string>
+    <string name="rtl_memorial_stolperstein">memorial stolperstein</string>
+    <string name="rtl_memorial_stone">memorial stone</string>
+    <string name="rtl_memorial_war">war memorial</string>
+    <string name="rtl_monument">monument</string>
+    <string name="rtl_museum">museum</string>
+    <string name="rtl_ruins">ruins</string>
+    <string name="rtl_stone_historic">historic stone</string>
+    <string name="rtl_theatre">theatre</string>
+    <string name="rtl_water_well">water well</string>
+    <string name="rtl_wayside_cross">wayside cross</string>
+    <string name="rtl_wayside_shrine">wayside shrine</string>
+    <string name="rtl_zoo">zoo</string>
+
+    <string name="rtl_beach_resort">beach resort</string>
+    <string name="rtl_cliff_diving">cliff diving</string>
+    <string name="rtl_climbing">climbing</string>
+    <string name="rtl_climbing_adventure">climbing adventure</string>
+    <string name="rtl_free_flying">free flying</string>
+    <string name="rtl_golf">golf</string>
+    <string name="rtl_gym">gym</string>
+    <string name="rtl_miniature_golf">miniature golf</string>
+    <string name="rtl_roller_skating">roller skating</string>
+    <string name="rtl_shooting">shooting</string>
+    <string name="rtl_skateboard">skateboard</string>
+    <string name="rtl_slipway">slipway</string>
+    <string name="rtl_soccer">soccer</string>
+    <string name="rtl_stadium">stadium</string>
+    <string name="rtl_swimming_area">swimming area</string>
+    <string name="rtl_swimming_outdoor">outdoor swimming</string>
+    <string name="rtl_tennis">tennis</string>
+    <string name="rtl_via_ferrata">via ferrata</string>
+    <string name="rtl_water_park">water park</string>
+
+    <string name="rtl_aerialway_station">aerialway station</string>
+    <string name="rtl_airport">airport</string>
+    <string name="rtl_cable_car">cable car</string>
+    <string name="rtl_car_shop">car shop</string>
+    <string name="rtl_chair_lift">chair lift</string>
+    <string name="rtl_drag_lift">drag lift</string>
+    <string name="rtl_gondola">gondola</string>
+    <string name="rtl_goods_lift">goods lift</string>
+    <string name="rtl_helipad">helipad</string>
+    <string name="rtl_parking">parking</string>
+    <string name="rtl_parking_private">private parking</string>
+    <string name="rtl_rail_funicular">funicular rail</string>
+
+    <string name="rtl_alpine_hut">alpine hut</string>
+    <string name="rtl_alpine_hut_private">private alpine hut</string>
+    <string name="rtl_alpine_hut_winter">alpine winter hut</string>
+    <string name="rtl_apartment">apartment</string>
+    <string name="rtl_camp_site">camp site</string>
+    <string name="rtl_caravan_site">caravan site</string>
+    <string name="rtl_chalet">chalet</string>
+    <string name="rtl_hostel">hostel</string>
+    <string name="rtl_hotel">hotel</string>
+    <string name="rtl_shelter_basic_hut">basic shelter hut</string>
+    <string name="rtl_wilderness_hut">wilderness hut</string>
+    <string name="rtl_wilderness_hut_private">private wilderness hut</string>
+
+    <string name="rtl_bar">bar</string>
+    <string name="rtl_biergarten">biergarten</string>
+    <string name="rtl_cafe">cafe</string>
+    <string name="rtl_fastfood">fastfood</string>
+    <string name="rtl_ice_cream">ice cream</string>
+    <string name="rtl_pub">pub</string>
+    <string name="rtl_restaurant">restaurant</string>
+
+    <string name="rtl_atm">atm</string>
+    <string name="rtl_bakery">bakery</string>
+    <string name="rtl_bank">bank</string>
+    <string name="rtl_beverages">beverages</string>
+    <string name="rtl_bicycle_rental">bicycle rental</string>
+    <string name="rtl_bicycle_shop">bicycle shop</string>
+    <string name="rtl_books">books</string>
+    <string name="rtl_butcher">butcher</string>
+    <string name="rtl_chemist">chemist</string>
+    <string name="rtl_convenience">convenience</string>
+    <string name="rtl_doityourself">doityourself</string>
+    <string name="rtl_farm_shop">farm shop</string>
+    <string name="rtl_laundry">laundry</string>
+    <string name="rtl_mall">mall</string>
+    <string name="rtl_marketplace">marketplace</string>
+    <string name="rtl_organic">organic</string>
+    <string name="rtl_postbox">postbox</string>
+    <string name="rtl_postoffice">postoffice</string>
+    <string name="rtl_sports_shop">sports shop</string>
+    <string name="rtl_supermarket">supermarket</string>
+    <string name="rtl_travel_agency">travel agency</string>
+
+    <string name="rtl_defibrillator">defibrillator</string>
+    <string name="rtl_doctors">doctors</string>
+    <string name="rtl_embassy">embassy</string>
+    <string name="rtl_emergency_phone">emergency phone</string>
+    <string name="rtl_firebrigade">firebrigade</string>
+    <string name="rtl_emergency_access_point">emergency access point</string>
+    <string name="rtl_hospital">hospital</string>
+    <string name="rtl_pharmacy">pharmacy</string>
+    <string name="rtl_police">police</string>
+
+    <string name="rtl_adit">adit</string>
+    <string name="rtl_petroleum_well">petroleum well</string>
+    <string name="rtl_power_coal">power (coal)</string>
+    <string name="rtl_power_gas">power (gas)</string>
+    <string name="rtl_power_nuclear">power (nuclear)</string>
+    <string name="rtl_power_water">power (water)</string>
+    <string name="rtl_power_wind">power (wind)</string>
+    <string name="rtl_wastewater_plant">wastewater plant</string>
+    <string name="rtl_water_works">water works</string>
+    <string name="rtl_watermill">watermill</string>
+    <string name="rtl_weir">weir</string>
+    <string name="rtl_windmill">windmill</string>
+    <string name="rtl_windpump">windpump</string>
+
+    <string name="rtl_bunker">bunker</string>
+    <string name="rtl_farmyard">farmyard</string>
+    <string name="rtl_hunting_stand">hunting stand</string>
+    <string name="rtl_kindergarten">kindergarten</string>
+    <string name="rtl_lighthouse">lighthouse</string>
+    <string name="rtl_school">school</string>
+    <string name="rtl_tower_communication">communication tower</string>
+    <string name="rtl_tower_observation">observation tower</string>
+    <string name="rtl_townhall">townhall</string>
+    <string name="rtl_university">university</string>
+
+    <string name="rtl_buddhist">buddhist</string>
+    <string name="rtl_church">church</string>
+    <string name="rtl_hindu">hindu</string>
+    <string name="rtl_mosque">mosque</string>
+    <string name="rtl_place_of_worship">place of worship</string>
+    <string name="rtl_shinto">shinto</string>
+    <string name="rtl_synagogue">synagogue</string>
+
+    <string name="rtl_block">block</string>
+    <string name="rtl_bollard">bollard</string>
+    <string name="rtl_border_control">border control</string>
+    <string name="rtl_bridge_movable">movable bridge</string>
+    <string name="rtl_cave_entrance">cave entrance</string>
+    <string name="rtl_cycle_barrier">cycle barrier</string>
+    <string name="rtl_elevator">elevator</string>
+    <string name="rtl_ford">ford</string>
+    <string name="rtl_ford_small">small ford</string>
+    <string name="rtl_gate">gate</string>
+    <string name="rtl_gate_private">private gate</string>
+    <string name="rtl_geyser">geyser</string>
+    <string name="rtl_hot_spring">hot spring</string>
+    <string name="rtl_kissing_gate">kissing gate</string>
+    <string name="rtl_ladder">ladder</string>
+    <string name="rtl_lift_gate">lift gate</string>
+    <string name="rtl_log">log</string>
+    <string name="rtl_oneway">oneway</string>
+    <string name="rtl_oneway_cycle">oneway (cycle)</string>
+    <string name="rtl_oneway_cycle_rev">oneway (cycle, reverse)</string>
+    <string name="rtl_oneway_rev">oneway (reverse)</string>
+    <string name="rtl_peak_small">small peak</string>
+    <string name="rtl_rapids">rapids</string>
+    <string name="rtl_rungs">rungs</string>
+    <string name="rtl_saddle_0">saddle 0°</string>
+    <string name="rtl_saddle_45">saddle 45°</string>
+    <string name="rtl_saddle_90">saddle 90°</string>
+    <string name="rtl_saddle_135">saddle 135°</string>
+    <string name="rtl_safety_rope">safety rope</string>
+    <string name="rtl_stone">stone</string>
+    <string name="rtl_traffic_signal">traffic signal</string>
+    <string name="rtl_turnstile">turnstile</string>
+    <string name="rtl_viewpoint">viewpoint</string>
+    <string name="rtl_waterfall">waterfall</string>
+
 </resources>
