cleanup some map theme legend strings

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -2455,8 +2455,11 @@
     <string name="rtl_nature_reserve_strict">nature reserve (strict)</string>
     <string name="rtl_cliff">cliff</string>
     <string name="rtl_ridge">ridge</string>
+    <string name="rtl_reef">reef</string>
     <string name="rtl_dyke">dyke</string>
     <string name="rtl_embankment">embankment</string>
+    <string name="rtl_beach">beach</string>
+    <string name="rtl_beach_gravel">gravel beach</string>
     <string name="rtl_spring">spring</string>
     <string name="rtl_powerline">powerline</string>
 
@@ -2545,7 +2548,6 @@
     <string name="rtl_cinema">cinema</string>
     <string name="rtl_cross">cross</string>
     <string name="rtl_fountain">fountain</string>
-    <string name="rtl_library">library</string>
     <string name="rtl_memorial">memorial</string>
     <string name="rtl_memorial_plaque">memorial plaque</string>
     <string name="rtl_memorial_statue">memorial statue</string>
@@ -2561,6 +2563,14 @@
     <string name="rtl_wayside_cross">wayside cross</string>
     <string name="rtl_wayside_shrine">wayside shrine</string>
     <string name="rtl_zoo">zoo</string>
+    <string name="rtl_library">library</string>
+    <string name="rtl_arts_centre">arts centre</string>
+    <string name="rtl_casino">casino</string>
+    <string name="rtl_nightclub">nightclub</string>
+    <string name="rtl_community_centre">community centre</string>
+    <string name="rtl_social_facility">social facility</string>
+    <string name="rtl_townhall">town hall</string>
+    <string name="rtl_courthouse">courthouse</string>
 
     <string name="rtl_beach_resort">beach resort</string>
     <string name="rtl_cliff_diving">cliff diving</string>
@@ -2585,15 +2595,24 @@
     <string name="rtl_aerialway_station">aerialway station</string>
     <string name="rtl_airport">airport</string>
     <string name="rtl_cable_car">cable car</string>
-    <string name="rtl_car_shop">car shop</string>
     <string name="rtl_chair_lift">chair lift</string>
     <string name="rtl_drag_lift">drag lift</string>
     <string name="rtl_gondola">gondola</string>
     <string name="rtl_goods_lift">goods lift</string>
     <string name="rtl_helipad">helipad</string>
+    <string name="rtl_rail_funicular">funicular rail</string>
+
     <string name="rtl_parking">parking</string>
     <string name="rtl_parking_private">private parking</string>
-    <string name="rtl_rail_funicular">funicular rail</string>
+    <string name="rtl_bicycle_parking">bicycle parking</string>
+    <string name="rtl_bicycle_rental">bicycle rental</string>
+    <string name="rtl_bicycle_shop">bicycle shop</string>
+    <string name="rtl_car_rental">car rental</string>
+    <string name="rtl_car_sharing">car sharing</string>
+    <string name="rtl_car_wash">car wash</string>
+    <string name="rtl_car_shop">car shop</string>
+    <string name="rtl_fuel">fuel</string>
+    <string name="rtl_ferry_terminal">ferry terminal</string>
 
     <string name="rtl_alpine_hut">alpine hut</string>
     <string name="rtl_alpine_hut_private">private alpine hut</string>
@@ -2615,13 +2634,13 @@
     <string name="rtl_ice_cream">ice cream</string>
     <string name="rtl_pub">pub</string>
     <string name="rtl_restaurant">restaurant</string>
+    <string name="rtl_bbq">BBQ</string>
+    <string name="rtl_water_point">water point</string>
 
     <string name="rtl_atm">atm</string>
     <string name="rtl_bakery">bakery</string>
     <string name="rtl_bank">bank</string>
     <string name="rtl_beverages">beverages</string>
-    <string name="rtl_bicycle_rental">bicycle rental</string>
-    <string name="rtl_bicycle_shop">bicycle shop</string>
     <string name="rtl_books">books</string>
     <string name="rtl_butcher">butcher</string>
     <string name="rtl_chemist">chemist</string>
@@ -2645,8 +2664,11 @@
     <string name="rtl_firebrigade">fire brigade</string>
     <string name="rtl_emergency_access_point">emergency access point</string>
     <string name="rtl_hospital">hospital</string>
+    <string name="rtl_clinic">clinic</string>
     <string name="rtl_pharmacy">pharmacy</string>
     <string name="rtl_police">police</string>
+    <string name="rtl_emergency_fire_hydrant">fire hydrant</string>
+    <string name="rtl_emergency_suction_point">emergency suction point</string>
 
     <string name="rtl_adit">adit</string>
     <string name="rtl_petroleum_well">petroleum well</string>
@@ -2665,13 +2687,14 @@
     <string name="rtl_bunker">bunker</string>
     <string name="rtl_farmyard">farmyard</string>
     <string name="rtl_hunting_stand">hunting stand</string>
-    <string name="rtl_kindergarten">kindergarten</string>
     <string name="rtl_lighthouse">lighthouse</string>
-    <string name="rtl_school">school</string>
     <string name="rtl_tower_communication">communication tower</string>
     <string name="rtl_tower_observation">observation tower</string>
-    <string name="rtl_townhall">town hall</string>
+
+    <string name="rtl_kindergarten">kindergarten</string>
+    <string name="rtl_school">school</string>
     <string name="rtl_university">university</string>
+    <string name="rtl_college">college</string>
 
     <string name="rtl_buddhist">buddhist</string>
     <string name="rtl_church">church</string>
@@ -2680,6 +2703,10 @@
     <string name="rtl_place_of_worship">place of worship</string>
     <string name="rtl_shinto">shinto</string>
     <string name="rtl_synagogue">synagogue</string>
+    <string name="rtl_pow">place of worship</string>
+    <string name="rtl_pow_christian">christian place of worship</string>
+    <string name="rtl_pow_jewish">jewish place of worship</string>
+    <string name="rtl_pow_muslim">muslim place of worship</string>
 
     <string name="rtl_block">block</string>
     <string name="rtl_bollard">bollard</string>
@@ -2746,11 +2773,6 @@
     <string name="rtl_ruin">ruin</string>
     <string name="rtl_saline">saline</string>
 
-    <string name="rtl_reef">reef</string>
-
-    <string name="rtl_beach">beach</string>
-    <string name="rtl_beach_gravel">gravel beach</string>
-
     <string name="rtl_freeway">freeway</string>
     <string name="rtl_freeway_similar">similar to freeway</string>
     <string name="rtl_interstate">interstate / A road</string>
@@ -2773,36 +2795,5 @@
     <string name="rtl_path_quality1">quality 1 (paved: asphalt, …)</string>
     <string name="rtl_path_quality23">quality 2/3 (paved: gravel, repaired, …)</string>
     <string name="rtl_path_quality45">quality 4/5 (unpaved)</string>
-
-    <string name="rtl_amenity_bicycle_parking">bicycle parking</string>
-    <string name="rtl_amenity_bicycle_rental">bicycle rental</string>
-    <string name="rtl_amenity_car_rental">car rental</string>
-    <string name="rtl_amenity_car_sharing">car sharing</string>
-    <string name="rtl_amenity_car_wash">car wash</string>
-    <string name="rtl_amenity_fuel">fuel</string>
-    <string name="rtl_amenity_ferry_terminal">ferry terminal</string>
-
-    <string name="rtl_amenity_bbq">amenity_bbq</string>
-
-    <string name="rtl_amenity_clinic">amenity_clinic</string>
-    <string name="rtl_emergency_fire_hydrant">emergency_fire_hydrant</string>
-    <string name="rtl_emergency_suction_point">emergency_suction_point</string>
-
-    <string name="rtl_amenity_college">amenity_college</string>
-
-    <string name="rtl_amenity_arts_centre">amenity_arts_centre</string>
-    <string name="rtl_amenity_casino">amenity_casino</string>
-    <string name="rtl_amenity_nightclub">amenity_nightclub</string>
-    <string name="rtl_amenity_community_centre">amenity_community_centre</string>
-    <string name="rtl_amenity_social_facility">amenity_social_facility</string>
-
-    <string name="rtl_amenity_courthouse">amenity_courthouse</string>
-
-    <string name="rtl_amenity_pow">place of worship</string>
-    <string name="rtl_amenity_pow_christian">christian place of worship</string>
-    <string name="rtl_amenity_pow_jewish">jewish place of worship</string>
-    <string name="rtl_amenity_pow_muslim">muslim place of worship</string>
-
-    <string name="rtl_amenity_water_point">water point</string>
 
 </resources>
