--- a/mapswithme-api/res/values/strings.xml
+++ b/mapswithme-api/res/values/strings.xml
@@ -2,5 +2,5 @@
 <resources>
     <string  name="mwm_should_be_installed">Offline maps are required to proceed. We have partnered with MAPS.ME to provide you with offline maps of the entire world.\nTo continue please download the app:</string>
     <string  name="down_pro">Download MAPS.ME</string>
-    <string  name="url_pro">http://maps.me/get</string>
+    <string  name="url_pro">http://maps.me</string>
 </resources>
