--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -2255,6 +2255,8 @@
         <item quantity="other">Track/route loaded (%d trackpoints)</item>
     </plurals>
     <string name="load_track_error">Error loading track/route</string>
+    <string name="map_clear_track">Clear route/track</string>
+    <string name="map_clear_track_confirm">Do you want to remove route/track \"%s\"?</string>
 
     <!-- route/track commons -->
     <string name="routes_tracks_dialog_title">Routes / tracks options</string>
