--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -892,7 +892,7 @@
     <string name="init_backup_history_delete_warning">You have saved more backups than your configured maximum value allows. Do you really want to remove all excess backups?</string>
     <string name="init_backup_automatic">Automatic backup reminder</string>
     <string name="init_backup_automatic_summary">Reminds you every x days to create an automatic backup (in addition to any manually created backups), 0=off</string>
-    <string name="init_backup_automatic_reminder">Shall I create an automatic backup for you now? This will only take a short while.</string>
+    <string name="init_backup_automatic_reminder">Do you want to create an automatic backup? This will only take a short while.</string>
     <string name="init_user_confirmation">I know what I\'m doing</string>
     <string name="init_backup_success">c:geo\'s database was successfully copied to:</string>
     <string name="init_backup_failed">Backup of c:geo\'s database failed.</string>
