--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -892,7 +892,7 @@
     <string name="init_backup_history_delete_warning">You have saved more backups than your configured maximum value allows. Do you really want to remove all excess backups?</string>
     <string name="init_backup_automatic">Automatic backup reminder</string>
     <string name="init_backup_automatic_summary">Reminds you every x days to create an automatic backup (in addition to any manually created backups), 0=off</string>
-    <string name="init_backup_automatic_reminder">Tap here to create an automatic backup. This will only take a short while.</string>
+    <string name="init_backup_automatic_reminder">Tap here to create an automatic backup. This will only take a short while. Long-tap to postpone.</string>
     <string name="init_user_confirmation">I know what I\'m doing</string>
     <string name="init_backup_success">c:geo\'s database was successfully copied to:</string>
     <string name="init_backup_failed">Backup of c:geo\'s database failed.</string>
@@ -2351,8 +2351,8 @@
     <string name="check_tiles_found">Routing data already present</string>
     <string name="check_tiles_missing">Found missing routing data:\n%1$s\n\nDo you want to download those files?%2$s</string>
     <string name="check_tiles_unsupported">Warning: Routing data is at least partly not available for the chosen region</string>
-    <string name="tileupdate_info">Tap here to check for updates of downloaded routing data files.</string>
-    <string name="mapupdate_info">Tap here to check for updates of map and theme files.</string>
+    <string name="tileupdate_info">Tap here to check for updates of downloaded routing data files. Long-tap to postpone.</string>
+    <string name="mapupdate_info">Tap here to check for updates of map and theme files. Long-tap to postpone.</string>
     <string name="no_updates_found">No updates found</string>
     <string name="updates_check">Updates check</string>
     <string name="mapserver_mapsforge_info">Basic maps, no map themes required</string>
