optionally use wallpaper as dashboard background (fix #11867)

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -864,6 +864,8 @@
         <item>Light</item>
         <item>Dark</item>
     </string-array>
+    <string name="init_wallpaper">Wallpaper</string>
+    <string name="init_summary_wallpaper">Display wallpaper as dashboard background</string>
 
     <!-- backup / restore -->
     <string name="init_backup_title">Create Backup</string>
