Improvement for wallpaper setting string

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -865,7 +865,7 @@
         <item>Dark</item>
     </string-array>
     <string name="init_wallpaper">Wallpaper</string>
-    <string name="init_summary_wallpaper">Display wallpaper as dashboard background</string>
+    <string name="init_summary_wallpaper">Show device wallpaper as home screen background</string>
 
     <!-- backup / restore -->
     <string name="init_backup_title">Create Backup</string>
