Download caches as non blocking service - first alpha version for #330

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -387,6 +387,8 @@
     <string name="caches_store_all">Store All</string>
     <string name="caches_store_unsaved">Store Unsaved</string>
     <string name="caches_store_selected">Store Selected</string>
+    <string name="caches_store_background">Background download (Experimental!)</string>
+    <string name="caches_store_background_title">Download caches</string>
     <string name="caches_history">History</string>
     <string name="caches_on_map">Show on map</string>
     <string name="caches_sort">Sort</string>
