--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1423,6 +1423,7 @@
     <string name="cache_share_field">Share</string>
     <string name="cache_time_full_hours">o\'clock</string>
     <string name="cache_listed_on">Listed on %s</string>
+    <string name="cache_recently_viewed">Recently viewed</string>
 
 
     <string name="cache_whereyougo_start">Open WhereYouGo to download and start this cartridge</string>
