--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1595,6 +1595,7 @@
     <string name="google_maps_style_retro">Retro</string>
     <string name="google_maps_style_osm">OSM</string>
     <string name="google_maps_style_contrast">High Contrast</string>
+    <string name="google_maps_style_auto">Device theme (Day/Night)</string>
 
     <!-- search -->
     <string name="geo_search_label">Search caches nearby</string>
