--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1226,6 +1226,9 @@
     <string name="cache_delete_userdefined_waypoints_confirm">Remove all user-defined waypoints of this cache?\n\nWaypoints will be deleted immediately, there is no undo.</string>
     <string name="cache_delete_userdefined_waypoints_note">Note: You have \"waypoints from note\" enabled. If you have coordinates in your personal note recognized by c:geo, waypoints will be recreated for them automatically. You can disable this in the personal note edit dialog.</string>
     <string name="cache_delete_userdefined_waypoints_success">User-defined waypoints deleted</string>
+    <string name="cache_delete_generated_waypoints">Remove generated waypoints</string>
+    <string name="cache_delete_generated_waypoints_confirm">Remove all generated waypoints from this cache?\n\nWaypoints will be deleted immediately, there is no undo.</string>
+    <string name="cache_delete_generated_waypoints_success">Generated waypoints deleted</string>
     <string name="cache_offline_store">Store</string>
     <string name="cache_offline_stored">Stored in device</string>
     <string name="cache_offline_not_ready">Not available offline</string>
