--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1505,9 +1505,8 @@
         <item>@string/waypoint_duplicate</item>
     </array>
     <string name="waypoint_cache_coordinates">Cache coordinates</string>
-    <string name="waypoint_calculate_coordinates">Calculate coordinates</string> <!-- Legacy: button text in coordinate input -->
-    <string name="waypoint_calculated_coordinates">Calculated coordinates</string> <!-- Legacy: line in waypoint description -->
-    <string name="waypoint_calculated_coordinates_global">Calculate coordinates (new)</string>
+    <string name="waypoint_calculated_coordinates">Calculated coordinates</string> <!-- Marks legacy calculated waypoints in waypoint list -->
+    <string name="waypoint_calculated_coordinates_global">Calculate coordinate</string>
     <string name="waypoint_custom">Custom</string>
     <string name="waypoint_my_coordinates">My coordinates</string>
     <string name="waypoint_bearing">Bearing in °</string>
